# f

./: .editorconfig  .gitignore  .markdownlint.json  README.md  pyproject.toml
src/f/: __init__.py  __main__.py  build.py  builder.py
