[project]
name = "f"
version = "0.0.0"
description = "Add your description here"
authors = [{ name = "Cbrnex" }]
dependencies = [
    "fonttools>=4.53.1",
    "ruff>=0.5.5",
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
main = { cmd = "python ./src/f/build.py" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/f"]
